_BACKUP/z_HTML-VERSIONS/version2/bgoonz42.gitbook.io/datastructures-in-pytho/aux-exploration/subject/untitled-4.md
<a href="../../index.html" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1630798188535.png?alt=media" class="image-67b14f24--logo-35ac2404--small-5fbe8ad7" />

<a href="../../index.html" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1630798188535.png?alt=media" class="image-67b14f24--logo-35ac2404--medium-5fbe8af6" />

<a href="https://bgoonz-blog.netlify.app/#gsc.tab=0" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Main Blog</span></span></a>

<a href="https://www.notion.so/webdevhub42/Python-Data-Structures-Unit-1da9a5d55db844f4b62aff6fd2b4d1ce" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Notion Notes</span></span></a>

<a href="https://bgoonz-branch-the-algos.vercel.app/" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">The Algorithms</span></span></a>

<a href="https://thealgorithms.netlify.app/#" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Python Module Website</span></span></a>

<a href="../../index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Home</span></a>

<a href="../../navigation.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Navigation</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Cirriculumn</span></span>

<a href="../../cirriculumn/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk17</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk18</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk19</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk20</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Utilities</span></span>

<a href="../../utilities/code-lab-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code lab Notebooks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Repl.IT</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Utilites</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">practice</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Supplemental Practice:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Abstract Data Structures:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Resources</span></span>

<a href="../../resources/python-vs-javascript.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python VS JavaScript</span></a>

<a href="../../resources/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Misc. Resources</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Things To Internalize:</span>

<a href="../../resources/intro-to-python-w-jupyter-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Intro To Python w Jupyter Notebooks</span></a>

<a href="../../resources/calculating-big-o.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Calculating Big O</span></a>

<a href="../../resources/python-cheat-sheet.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Cheat Sheet</span></a>

<a href="../../resources/code-signal-cga-sprint-resources.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code Signal CGA Sprint Resources</span></a>

<a href="../../resources/youtube.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Youtube</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Links</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">quick-reference</span></span>

<a href="../../misc/untitled/python-snippets.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Snippets</span></a>

<a href="../../quick-reference/python-module-index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Module Index:</span></a>

<a href="../../quick-reference/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Info</span></a>

<a href="../../quick-reference/python-glossary.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Glossary</span></a>

<a href="../../quick-reference/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">index</span></a>

<a href="../../bash-commands.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">List Of Python Cheat Sheets</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Python-Docs</span></span>

<a href="../../stdlib/basic-syntax.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Basic Syntax</span></a>

<a href="../../stdlib/python-standard-library-stdlib.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Standard Library (STDLIB)</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Docs</span>

<a href="../../stdlib/built-in-functions.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built In Functions</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Lists</span>

<a href="../../stdlib/dictionaries.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Classes</span>

<a href="../../stdlib/queue-and-stacks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue &amp; Stacks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">MISC</span></span>

<a href="../../interview-prep/interview-resources/unsorted-examples.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Unsorted Examples</span></a>

<a href="../../misc/outline.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">About Python</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Interview Prep</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Interview Resources</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Installations Setup & Env</span></span>

<a href="../../installations-setup-and-env/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">python-setup</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Aux-Exploration</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Subject</span>

<a href="list-directory-contents.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">List Directory Contents</span></a>

<a href="untitled-5.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Employee Manager</span></a>

<a href="untitled-4.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca--navButtonOpened-6a88552e"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">OS Module</span></a>

<a href="untitled-3.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Untitled</span></a>

<a href="untitled-2.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Untitled</span></a>

<a href="untitled-1.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Untitled</span></a>

<a href="https://www.gitbook.com/?utm_source=content&amp;utm_medium=trademark&amp;utm_campaign=bgoonz42" class="reset-3c756112--trademark-a8da4b94"></a>

<span class="text-4505230f--TextH200-a3425406--textUIFamily-5ebd8e40">Powered by **GitBook**</span>

<span class="text-4505230f--DisplayH900-bfb998fa--textContentFamily-49a318e1">OS Module</span>
==============================================================================================

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="263eb8e8572f4f0ebdb86763a9f07cd4"><span data-offset-key="263eb8e8572f4f0ebdb86763a9f07cd4:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="ab5713ded34c41ff8b643a5f2a09e980"><span data-offset-key="ab5713ded34c41ff8b643a5f2a09e980:0">Import OS Module</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="24413e68b55649a183bad5dcf6568aac"><span data-offset-key="24413e68b55649a183bad5dcf6568aac:0">First, we need to import the </span><span data-offset-key="24413e68b55649a183bad5dcf6568aac:1">**OS Module**</span><span data-offset-key="24413e68b55649a183bad5dcf6568aac:2"> in our project. So for using the OS Module, we need to add using the “</span><span data-offset-key="24413e68b55649a183bad5dcf6568aac:3">**import**</span><span data-offset-key="24413e68b55649a183bad5dcf6568aac:4">” statement. Along with that, we are gonna import a </span><span data-offset-key="24413e68b55649a183bad5dcf6568aac:5">**time** </span><span data-offset-key="24413e68b55649a183bad5dcf6568aac:6">module to make our program wait for some time using the sleep method.</span></span></span>

    import osimport time

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="89d7a352f77e4c20b28792c70743bd37"><span data-offset-key="89d7a352f77e4c20b28792c70743bd37:0">Create a Function for Create Folders</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="abcd2f8ef71c4bca8bff1b69bc436737"><span data-offset-key="abcd2f8ef71c4bca8bff1b69bc436737:0">As we know that for creating the function in Python we have to use “</span><span data-offset-key="abcd2f8ef71c4bca8bff1b69bc436737:1">**def**</span><span data-offset-key="abcd2f8ef71c4bca8bff1b69bc436737:2">” keyword to define a function.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="21b0011ef9934731a6d9764282dfd67b"><span data-offset-key="21b0011ef9934731a6d9764282dfd67b:0">So let’s create a new function “</span><span data-offset-key="21b0011ef9934731a6d9764282dfd67b:1">**createFolders**</span><span data-offset-key="21b0011ef9934731a6d9764282dfd67b:2">(address)” which accepts one argument as the address where we need to create folders.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="8383e1ba2ef64b52bbe9ecc18f033e56"><span data-offset-key="8383e1ba2ef64b52bbe9ecc18f033e56:0">So for this example let’s create 10 directories or folders using OS built-in Module.</span></span></span>

    def createFolders(HOME_FOLDER):    for i in range(10):            os.mkdir(HOME_FOLDER + str(i) + '-Dir')

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="2440bf7c16cb4649b53cc8eda2326242"><span data-offset-key="2440bf7c16cb4649b53cc8eda2326242:0">Create a Function for Create Files</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4feccc8c9bc84008a6b4e5c1d34bc729"><span data-offset-key="4feccc8c9bc84008a6b4e5c1d34bc729:0">Since we have declared a function which creates 10 folders at address which we passed as an argument.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="98d9fe3149bb49e1bce426226795411a"><span data-offset-key="98d9fe3149bb49e1bce426226795411a:0">Now let’s create a new function for creating files named it as </span><span data-offset-key="98d9fe3149bb49e1bce426226795411a:1">**“createFiles(arg)**</span><span data-offset-key="98d9fe3149bb49e1bce426226795411a:2">” which accepts one argument as the address where we need to create files.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="559f7f96760944d7bef1f9656aadb95b"><span data-offset-key="559f7f96760944d7bef1f9656aadb95b:0">So for this example let’s create 10 files using OS Module.</span></span></span>

    def createFiles(HOME_FOLDER):    for i in range(10):        f = open(HOME_FOLDER + str(i) + '-File.txt', 'w')        f.close()

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="7dd3b7c3f5f644c280e0d489ba53e4b7"><span data-offset-key="7dd3b7c3f5f644c280e0d489ba53e4b7:0">Create a Function for Rename Files</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="17c7a661623f47d9ba5a7f4736a20337"><span data-offset-key="17c7a661623f47d9ba5a7f4736a20337:0">Now we have already defined the function for creating folders and files, so now let’s create a new function for rename the files and folders.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d76c240144bd4b37a383caaeb5291a2f"><span data-offset-key="d76c240144bd4b37a383caaeb5291a2f:0">**Also Read =&gt;** </span></span><a href="https://codezup.com/basic-flask-python-application-tutorial/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="93187cae93094f5bbb47e5e46b015776"><span data-offset-key="93187cae93094f5bbb47e5e46b015776:0"><strong>Flask Python Basic Application Tutorial [ Part-1 ]</strong></span></span></a><span data-key="8839d3cbe7c34dcbb67e487aea302970"><span data-offset-key="8839d3cbe7c34dcbb67e487aea302970:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="bf2c866cfb494225bf49aafa04e3d22a"><span data-offset-key="bf2c866cfb494225bf49aafa04e3d22a:0">As we already created the folders with </span><span data-offset-key="bf2c866cfb494225bf49aafa04e3d22a:1">**“-Dir”**</span><span data-offset-key="bf2c866cfb494225bf49aafa04e3d22a:2"> at last so now what we want is to replace this “</span><span data-offset-key="bf2c866cfb494225bf49aafa04e3d22a:3">**Dir**</span><span data-offset-key="bf2c866cfb494225bf49aafa04e3d22a:4">” with Folder.</span></span></span>

    def renameFiles(HOME_FOLDER):    os.chdir(HOME_FOLDER)    for i in os.listdir():        fileName, fileExt = os.path.splitext(i)        print(fileName, fileExt)        os.rename(i, i.replace('Dir', 'Folder'))

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="64b6c58abcf647ed97549ed20d90c599"><span data-offset-key="64b6c58abcf647ed97549ed20d90c599:0">**Create Main Function Code**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="e18ffe81252d486a82b7e2905d93fb0f"><span data-offset-key="e18ffe81252d486a82b7e2905d93fb0f:0">Now we have created all the basic functions of the built-in Module. Now what we want is to create a main function to call them to show their functionality.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="2538cd36fbd34f3f93235311748da382"><span data-offset-key="2538cd36fbd34f3f93235311748da382:0">And also we are gonna use the </span><span data-offset-key="2538cd36fbd34f3f93235311748da382:1">**time module**</span><span data-offset-key="2538cd36fbd34f3f93235311748da382:2"> which has sleep(seconds) in this main function to make a pause while creating and renaming files or folders.</span></span></span>

    if __name__ == '__main__':    HOME_FOLDER = 'C:/CodezUp/Python/Scripts/Demo/'    createFolders(HOME_FOLDER)    createFiles(HOME_FOLDER)    time.sleep(10)    renameFiles(HOME_FOLDER)

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6b6e567e35d94296a26fbdbf0a05166f"><span data-offset-key="6b6e567e35d94296a26fbdbf0a05166f:0">**Output**</span></span></span>

<figure><img src="https://i0.wp.com/codezup.com/wp-content/uploads/2019/12/How-to-create-folders-and-manipulate-them-Python-output1.png?resize=665%2C253&amp;ssl=1" alt="How to create folders and manipulate them-Python OS Module" class="image-52799b3c" /><figcaption><span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1" style="max-width: 100%">How to create folders and manipulate them-Python OS Module</span></figcaption></figure>

<figure><img src="https://i1.wp.com/codezup.com/wp-content/uploads/2019/12/How-to-create-folders-and-manipulate-them-Python-output2.png?resize=665%2C465&amp;ssl=1" alt="How to create folders and manipulate them using OS Module in Python" class="image-52799b3c" /><figcaption><span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1" style="max-width: 100%">How to create folders and manipulate them using OS Module in Python</span></figcaption></figure>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6c3692d943b645329f7bb56512d02f88"><span data-offset-key="6c3692d943b645329f7bb56512d02f88:0">**Source Code :**</span></span></span>

    import osimport time​def createFolders(HOME_FOLDER):    for i in range(10):            os.mkdir(HOME_FOLDER + str(i) + '-Dir')​def createFiles(HOME_FOLDER):    for i in range(10):        f = open(HOME_FOLDER + str(i) + '-File.txt', 'w')        f.close()​def renameFiles(HOME_FOLDER):    os.chdir(HOME_FOLDER)    for i in os.listdir():        fileName, fileExt = os.path.splitext(i)        print(fileName, fileExt)        os.rename(i, i.replace('Dir', 'Folder'))​if __name__ == '__main__':    HOME_FOLDER = 'C:/CodezUp/Python/Scripts/Demo/'    createFolders(HOME_FOLDER)    createFiles(HOME_FOLDER)    time.sleep(10)    renameFiles(HOME_FOLDER)

<a href="untitled-5.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardPrevious-56a5e674"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Previous</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Employee Manager</span>

<a href="untitled-3.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardNext-19241c42"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Next</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Untitled</span>

<img src="https://avatars.githubusercontent.com/u/66654881?v=4" class="image-67b14f24--avatar-1c1d03ec" />

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Last updated 10 minutes ago</span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Export as PDF</span>
